k8s-interview/assets/broken.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buggy
  labels: {app: buggy}
spec:
  replicas: 1
  selector: {matchLabels:{app: buggy}}
  template:
    metadata: {labels:{app: buggy}}
    spec:
      containers:
      - name: app
        image: alpine:3.19
        command: ["sh","-c","echo Starting && echo $NEEDED && sleep 3600"]
