k8s-interview/assets/config-secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels: {app: web}
spec:
  replicas: 2
  selector: {matchLabels:{app: web}}
  template:
    metadata: {labels:{app: web}}
    spec:
      containers:
      - name: app
        image: ghcr.io/abdennour/nginx-echo:latest
        ports: [{containerPort: 8080}]
        args: ["-text=$(GREETING) | key=$(API_KEY)"]
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector: {app: web}
  ports:
  - port: 80
    targetPort: 8080
