k8s-interview/assets/hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-burner
  labels: {app: burner}
spec:
  replicas: 2
  selector: {matchLabels:{app: burner}}
  template:
    metadata: {labels:{app: burner}}
    spec:
      containers:
      - name: app
        image: vish/stress
        args: ["-cpus","1"]
        resources:
          requests: {cpu: "100m", memory: "64Mi"}
          limits:   {cpu: "500m", memory: "128Mi"}
---
apiVersion: v1
kind: Service
metadata:
  name: cpu-burner
spec:
  selector: {app: burner}
  ports:
  - port: 80
    targetPort: 8080
