k8s-interview/assets/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels: {app: web}
spec:
  replicas: 2
  selector: {matchLabels:{app: web}}
  template:
    metadata: {labels:{app: web}}
    spec:
      containers:
      - name: app
        image: ghcr.io/nginxdemos/hello:plain-text
        ports: [{containerPort: 80}]
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector: {app: web}
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-from-ingress-and-same-namespace
spec:
  podSelector:
    matchLabels: {app: web}
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    - podSelector: {}  # same namespace
    ports:
    - protocol: TCP
      port: 80
